project(liblzma)

set(liblzmaDir ${CMAKE_SOURCE_DIR}/externals/xz-5.2.5)

add_compile_definitions(-DHAVE_CONFIG_H
                        -D_LIB)

set(liblzmaIncludeDir   ${liblzmaDir}/windows/vs2019
                        ${liblzmaDir}/src/liblzma/common
                        ${liblzmaDir}/src/common
                        ${liblzmaDir}/src/liblzma/api
                        ${liblzmaDir}/src/liblzma/check
                        ${liblzmaDir}/src/liblzma/delta
                        ${liblzmaDir}/src/liblzma/lz
                        ${liblzmaDir}/src/liblzma/lzma
                        ${liblzmaDir}/src/liblzma/rangecoder
                        ${liblzmaDir}/src/liblzma/simple
)

include_directories(${liblzmaIncludeDir})

set(source  ${liblzmaDir}/src/common/tuklib_cpucores.c
            ${liblzmaDir}/src/common/tuklib_physmem.c
            ${liblzmaDir}/src/liblzma/check/check.c
            ${liblzmaDir}/src/liblzma/check/crc32_fast.c
            ${liblzmaDir}/src/liblzma/check/crc32_table.c
            ${liblzmaDir}/src/liblzma/check/crc64_fast.c
            ${liblzmaDir}/src/liblzma/check/crc64_table.c
            ${liblzmaDir}/src/liblzma/check/sha256.c
            ${liblzmaDir}/src/liblzma/common/alone_decoder.c
            ${liblzmaDir}/src/liblzma/common/alone_encoder.c
            ${liblzmaDir}/src/liblzma/common/auto_decoder.c
            ${liblzmaDir}/src/liblzma/common/block_buffer_decoder.c
            ${liblzmaDir}/src/liblzma/common/block_buffer_encoder.c
            ${liblzmaDir}/src/liblzma/common/block_decoder.c
            ${liblzmaDir}/src/liblzma/common/block_encoder.c
            ${liblzmaDir}/src/liblzma/common/block_header_decoder.c
            ${liblzmaDir}/src/liblzma/common/block_header_encoder.c
            ${liblzmaDir}/src/liblzma/common/block_util.c
            ${liblzmaDir}/src/liblzma/common/common.c
            ${liblzmaDir}/src/liblzma/common/easy_buffer_encoder.c
            ${liblzmaDir}/src/liblzma/common/easy_decoder_memusage.c
            ${liblzmaDir}/src/liblzma/common/easy_encoder.c
            ${liblzmaDir}/src/liblzma/common/easy_encoder_memusage.c
            ${liblzmaDir}/src/liblzma/common/easy_preset.c
            ${liblzmaDir}/src/liblzma/common/filter_buffer_decoder.c
            ${liblzmaDir}/src/liblzma/common/filter_buffer_encoder.c
            ${liblzmaDir}/src/liblzma/common/filter_common.c
            ${liblzmaDir}/src/liblzma/common/filter_decoder.c
            ${liblzmaDir}/src/liblzma/common/filter_encoder.c
            ${liblzmaDir}/src/liblzma/common/filter_flags_decoder.c
            ${liblzmaDir}/src/liblzma/common/filter_flags_encoder.c
            ${liblzmaDir}/src/liblzma/common/hardware_cputhreads.c
            ${liblzmaDir}/src/liblzma/common/hardware_physmem.c
            ${liblzmaDir}/src/liblzma/common/index.c
            ${liblzmaDir}/src/liblzma/common/index_decoder.c
            ${liblzmaDir}/src/liblzma/common/index_encoder.c
            ${liblzmaDir}/src/liblzma/common/index_hash.c
            ${liblzmaDir}/src/liblzma/common/outqueue.c
            ${liblzmaDir}/src/liblzma/common/stream_buffer_decoder.c
            ${liblzmaDir}/src/liblzma/common/stream_buffer_encoder.c
            ${liblzmaDir}/src/liblzma/common/stream_decoder.c
            ${liblzmaDir}/src/liblzma/common/stream_encoder.c
            ${liblzmaDir}/src/liblzma/common/stream_encoder_mt.c
            ${liblzmaDir}/src/liblzma/common/stream_flags_common.c
            ${liblzmaDir}/src/liblzma/common/stream_flags_decoder.c
            ${liblzmaDir}/src/liblzma/common/stream_flags_encoder.c
            ${liblzmaDir}/src/liblzma/common/vli_decoder.c
            ${liblzmaDir}/src/liblzma/common/vli_encoder.c
            ${liblzmaDir}/src/liblzma/common/vli_size.c
            ${liblzmaDir}/src/liblzma/delta/delta_common.c
            ${liblzmaDir}/src/liblzma/delta/delta_decoder.c
            ${liblzmaDir}/src/liblzma/delta/delta_encoder.c
            ${liblzmaDir}/src/liblzma/lzma/fastpos_table.c
            ${liblzmaDir}/src/liblzma/lzma/lzma2_decoder.c
            ${liblzmaDir}/src/liblzma/lzma/lzma2_encoder.c
            ${liblzmaDir}/src/liblzma/lzma/lzma_decoder.c
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder.c
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder_optimum_fast.c
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder_optimum_normal.c
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder_presets.c
            ${liblzmaDir}/src/liblzma/lz/lz_decoder.c
            ${liblzmaDir}/src/liblzma/lz/lz_encoder.c
            ${liblzmaDir}/src/liblzma/lz/lz_encoder_mf.c
            ${liblzmaDir}/src/liblzma/rangecoder/price_table.c
            ${liblzmaDir}/src/liblzma/simple/arm.c
            ${liblzmaDir}/src/liblzma/simple/armthumb.c
            ${liblzmaDir}/src/liblzma/simple/ia64.c
            ${liblzmaDir}/src/liblzma/simple/powerpc.c
            ${liblzmaDir}/src/liblzma/simple/simple_coder.c
            ${liblzmaDir}/src/liblzma/simple/simple_decoder.c
            ${liblzmaDir}/src/liblzma/simple/simple_encoder.c
            ${liblzmaDir}/src/liblzma/simple/sparc.c
            ${liblzmaDir}/src/liblzma/simple/x86.c
    )

set(heards  ${liblzmaDir}/src/common/mythread.h
            ${liblzmaDir}/src/common/sysdefs.h
            ${liblzmaDir}/src/common/tuklib_common.h
            ${liblzmaDir}/src/common/tuklib_config.h
            ${liblzmaDir}/src/common/tuklib_cpucores.h
            ${liblzmaDir}/src/common/tuklib_integer.h
            ${liblzmaDir}/src/common/tuklib_physmem.h
            ${liblzmaDir}/src/liblzma/api/lzma.h
            ${liblzmaDir}/src/liblzma/api/lzma/base.h
            ${liblzmaDir}/src/liblzma/api/lzma/bcj.h
            ${liblzmaDir}/src/liblzma/api/lzma/block.h
            ${liblzmaDir}/src/liblzma/api/lzma/check.h
            ${liblzmaDir}/src/liblzma/api/lzma/container.h
            ${liblzmaDir}/src/liblzma/api/lzma/delta.h
            ${liblzmaDir}/src/liblzma/api/lzma/filter.h
            ${liblzmaDir}/src/liblzma/api/lzma/hardware.h
            ${liblzmaDir}/src/liblzma/api/lzma/index.h
            ${liblzmaDir}/src/liblzma/api/lzma/index_hash.h
            ${liblzmaDir}/src/liblzma/api/lzma/lzma12.h
            ${liblzmaDir}/src/liblzma/api/lzma/stream_flags.h
            ${liblzmaDir}/src/liblzma/api/lzma/version.h
            ${liblzmaDir}/src/liblzma/api/lzma/vli.h
            ${liblzmaDir}/src/liblzma/check/check.h
            ${liblzmaDir}/src/liblzma/check/crc32_table_be.h
            ${liblzmaDir}/src/liblzma/check/crc32_table_le.h
            ${liblzmaDir}/src/liblzma/check/crc64_table_be.h
            ${liblzmaDir}/src/liblzma/check/crc64_table_le.h
            ${liblzmaDir}/src/liblzma/check/crc_macros.h
            ${liblzmaDir}/src/liblzma/common/alone_decoder.h
            ${liblzmaDir}/src/liblzma/common/block_buffer_encoder.h
            ${liblzmaDir}/src/liblzma/common/block_decoder.h
            ${liblzmaDir}/src/liblzma/common/block_encoder.h
            ${liblzmaDir}/src/liblzma/common/common.h
            ${liblzmaDir}/src/liblzma/common/easy_preset.h
            ${liblzmaDir}/src/liblzma/common/filter_common.h
            ${liblzmaDir}/src/liblzma/common/filter_decoder.h
            ${liblzmaDir}/src/liblzma/common/filter_encoder.h
            ${liblzmaDir}/src/liblzma/common/index.h
            ${liblzmaDir}/src/liblzma/common/index_encoder.h
            ${liblzmaDir}/src/liblzma/common/memcmplen.h
            ${liblzmaDir}/src/liblzma/common/outqueue.h
            ${liblzmaDir}/src/liblzma/common/stream_decoder.h
            ${liblzmaDir}/src/liblzma/common/stream_flags_common.h
            ${liblzmaDir}/src/liblzma/delta/delta_common.h
            ${liblzmaDir}/src/liblzma/delta/delta_decoder.h
            ${liblzmaDir}/src/liblzma/delta/delta_encoder.h
            ${liblzmaDir}/src/liblzma/delta/delta_private.h
            ${liblzmaDir}/src/liblzma/lzma/fastpos.h
            ${liblzmaDir}/src/liblzma/lzma/lzma2_decoder.h
            ${liblzmaDir}/src/liblzma/lzma/lzma2_encoder.h
            ${liblzmaDir}/src/liblzma/lzma/lzma_common.h
            ${liblzmaDir}/src/liblzma/lzma/lzma_decoder.h
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder.h
            ${liblzmaDir}/src/liblzma/lzma/lzma_encoder_private.h
            ${liblzmaDir}/src/liblzma/lz/lz_decoder.h
            ${liblzmaDir}/src/liblzma/lz/lz_encoder.h
            ${liblzmaDir}/src/liblzma/lz/lz_encoder_hash.h
            ${liblzmaDir}/src/liblzma/lz/lz_encoder_hash_table.h
            ${liblzmaDir}/src/liblzma/rangecoder/price.h
            ${liblzmaDir}/src/liblzma/rangecoder/range_common.h
            ${liblzmaDir}/src/liblzma/rangecoder/range_decoder.h
            ${liblzmaDir}/src/liblzma/rangecoder/range_encoder.h
            ${liblzmaDir}/src/liblzma/simple/simple_coder.h
            ${liblzmaDir}/src/liblzma/simple/simple_decoder.h
            ${liblzmaDir}/src/liblzma/simple/simple_encoder.h
            ${liblzmaDir}/src/liblzma/simple/simple_private.h
            ${liblzmaDir}/windows/vs2019/config.h
    )


add_library(liblzma SHARED ${source} ${heards})

